[package]
name = "ethabi"
version = "12.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
rustc-hex = { git = "https://github.com/enigmampc/rustc-hex.git", rev = "2.0.1-sgx-1.0.9" }
tiny-keccak = "1.4"
error-chain = { git = "https://github.com/enigmampc/error-chain.git", rev = "0.12.0-sgx-1.0.9",  default-features = false }
ethereum-types = { git = "https://github.com/fredfortier/parity-common.git", default-features = false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.2" , features = ["backtrace"] }
uint = { git = "https://github.com/fredfortier/parity-common.git", default-features = false }


[dev-dependencies]
hex-literal = "0.2.1"
paste = "0.1.6"

[badges]
travis-ci = { repository = "paritytech/ethabi", branch = "master" }
coveralls = { repository = "paritytech/ethabi", branch = "master" }
